extends CharacterBody2D

# -----------------------------
# MOVIMENTO / ANIMA√á√ÉO DO PLAYER
# -----------------------------
@export var speed: float = 150.0
@export var sprint_multiplier: float = 1.8  # Multiplicador de velocidade no sprint
@export var dash_speed: float = 500.0  # Velocidade do dash
@export var dash_duration: float = 0.15  # Dura√ß√£o do dash em segundos
@export var dash_cooldown: float = 1.0  # Cooldown entre dashes em segundos

var direction: Vector2 = Vector2.ZERO
var is_sprinting: bool = false
var is_dashing: bool = false
var can_dash: bool = true
var dash_direction: Vector2 = Vector2.ZERO

# Timers para dash
var dash_timer: float = 0.0
var dash_cooldown_timer: float = 0.0

# -----------------------------
# SISTEMA DE SA√öDE DO PLAYER
# -----------------------------
@export var max_health: float = 100.0
var current_health: float
var is_dead: bool = false

@onready var animation: AnimatedSprite2D = $AnimatedSprite2D

func _physics_process(delta: float) -> void:
	# Atualiza timers
	update_dash_timers(delta)
	
	# Input de movimento
	direction = Input.get_vector("ui_left", "ui_right", "ui_up", "ui_down")
	
	# Sprint (segurar Shift)
	is_sprinting = Input.is_action_pressed("sprint") and direction != Vector2.ZERO
	
	# Dash (pressionar Space)
	if Input.is_action_just_pressed("dash") and can_dash and direction != Vector2.ZERO:
		start_dash()
	
	# Anima√ß√µes
	if direction != Vector2.ZERO and not is_dashing:
		play_animations(direction)
	else:
		if animation and not is_dashing:
			animation.stop()

	# Arma aponta pro mouse (caso j√° tenha arma equipada)
	if current_weapon_data and weapon_marker:
		weapon_marker.look_at(get_global_mouse_position())
		# offset opcional, se o sprite "aponta" para cima/direita diferente do seu:
		if weapon_angle_offset_deg != 0.0:
			weapon_marker.rotation += deg_to_rad(weapon_angle_offset_deg)
		
		# üîí Garante que a hitbox de ataque n√£o gire em si mesma
		# A hitbox gira com o weapon_marker, mas mant√©m rotation local = 0
		if attack_area and is_instance_valid(attack_area):
			attack_area.rotation = 0.0
		
		# üîÑ O sprite da arma √© filho do weapon_marker, ent√£o rotaciona automaticamente
		# Apenas garantimos que ele est√° vis√≠vel e no lugar certo
		if current_weapon_sprite and is_instance_valid(current_weapon_sprite):
			# Se o sprite n√£o √© filho do marker por algum motivo, corrige isso
			if current_weapon_sprite.get_parent() != weapon_marker:
				print("[PLAYER] ‚ö†Ô∏è Sprite da arma n√£o √© filho do marker! Reparentando...")
				current_weapon_sprite.reparent(weapon_marker)
			# Mant√©m rota√ß√£o local = 0 para que apenas o marker controle a rota√ß√£o
			current_weapon_sprite.rotation = 0.0

	# Calcula velocidade final
	var final_velocity: Vector2
	
	if is_dashing:
		# Durante dash, movimento r√°pido na dire√ß√£o do dash
		final_velocity = dash_direction * dash_speed
	else:
		# Movimento normal com sprint
		var current_speed = speed
		if is_sprinting:
			current_speed *= sprint_multiplier
		final_velocity = direction * current_speed
	
	velocity = final_velocity
	move_and_slide()


func play_animations(dir: Vector2) -> void:
	if not animation:
		return

	# Seu mapeamento atual de anima√ß√µes (ajuste os nomes se quiser)
	if dir.x > 0 and dir.y == 0:
		animation.play("default")            # ‚Üí direita
	elif dir.x < 0 and dir.y == 0:
		animation.play("new_animation_3")    # ‚Üê esquerda
	elif dir.x == 0 and dir.y < 0:
		animation.play("new_animation_1")    # ‚Üë cima
	elif dir.x == 0 and dir.y > 0:
		animation.play("new_animation_5")    # ‚Üì baixo
	elif dir.x > 0 and dir.y < 0:
		animation.play("new_animation")      # ‚Üó
	elif dir.x < 0 and dir.y < 0:
		animation.play("new_animation_2")    # ‚Üñ
	elif dir.x < 0 and dir.y > 0:
		animation.play("new_animation_4")    # ‚Üô
	elif dir.x > 0 and dir.y > 0:
		animation.play("new_animation_6")    # ‚Üò


# -----------------------------
# SISTEMA DE SPRINT E DASH
# -----------------------------
func update_dash_timers(delta: float) -> void:
	"""Atualiza os timers do dash"""
	# Timer de dura√ß√£o do dash
	if is_dashing:
		dash_timer -= delta
		if dash_timer <= 0.0:
			end_dash()
	
	# Timer de cooldown do dash
	if not can_dash:
		dash_cooldown_timer -= delta
		if dash_cooldown_timer <= 0.0:
			can_dash = true
			print("[PLAYER] üîÑ Dash dispon√≠vel novamente!")


func start_dash() -> void:
	"""Inicia o dash"""
	if is_dashing or not can_dash:
		return
	
	print("[PLAYER] üí® DASH iniciado!")
	is_dashing = true
	can_dash = false
	dash_timer = dash_duration
	dash_cooldown_timer = dash_cooldown
	dash_direction = direction.normalized()
	
	# Efeito visual (opcional): pode adicionar part√≠culas ou anima√ß√£o especial aqui


func end_dash() -> void:
	"""Finaliza o dash"""
	print("[PLAYER] ‚úÖ Dash finalizado")
	is_dashing = false
	dash_timer = 0.0


# -----------------------------
# ARMA / ATAQUE
# -----------------------------
# -----------------------------
# ARMA DO PLAYER
# -----------------------------
var current_weapon_data: WeaponData
@export var weapon_item_scene: PackedScene = preload("res://scenes/items/bow.tscn")  # Cena gen√©rica do item

@export var weapon_angle_offset_deg: float = 0.0   # ajuste fino da rota√ß√£o do sprite da arma
@onready var weapon_marker: Node2D = $WeaponMarker2D
@onready var projectile_spawn_marker: Marker2D = $WeaponMarker2D/ProjectileSpawnMarker2D
@onready var weapon_timer: Timer = $WeaponMarker2D/Weapon_timer
# O sprite da arma ser√° criado dinamicamente como filho do WeaponMarker2D
var current_weapon_sprite: AnimatedSprite2D = null
@export var fire_rate: float = 3.0  # tiros por segundo (cd = 1 / fire_rate)
var can_attack: bool = true

var attack_area: Area2D

func _ready() -> void:
	add_to_group("player")
	print("[PLAYER] Inicializado e adicionado ao grupo 'player'")
	print("[PLAYER]    Nome do node: ", name)
	print("[PLAYER]    Tipo: ", get_class())
	print("[PLAYER]    Collision Layer: ", collision_layer, " (bin√°rio: ", String.num_int64(collision_layer, 2), ")")
	print("[PLAYER]    Collision Mask: ", collision_mask, " (bin√°rio: ", String.num_int64(collision_mask, 2), ")")
	
	# Verifica CollisionShape2D
	var collision_shape = get_node_or_null("CollisionShape2D")
	if collision_shape:
		print("[PLAYER]    CollisionShape2D encontrado")
		print("[PLAYER]       Disabled: ", collision_shape.disabled)
		print("[PLAYER]       Shape: ", collision_shape.shape)
	else:
		print("[PLAYER]    ‚ö†Ô∏è CollisionShape2D N√ÉO encontrado!")
	
	# Inicializa sa√∫de
	current_health = max_health
	print("[PLAYER] Sa√∫de inicializada: %.1f/%.1f" % [current_health, max_health])
	
	# Inicia contagem de estat√≠sticas
	if has_node("/root/GameStats"):
		get_node("/root/GameStats").start_game()
		print("[PLAYER] Sistema de estat√≠sticas iniciado")
	
	# Configura timer de cooldown
	if weapon_timer:
		weapon_timer.wait_time = 1.0 / fire_rate  # Valor padr√£o (ser√° sobrescrito pela arma)
		weapon_timer.one_shot = true
		weapon_timer.timeout.connect(_on_weapon_timer_timeout)
		print("[PLAYER] Timer de ataque configurado (cooldown ser√° definido pela arma equipada)")
	# Armas melee n√£o rotacionam para o mouse


func _input(event: InputEvent) -> void:
	if event.is_action_pressed("attack"):
		print("[PLAYER] Tecla de ataque pressionada")
		if can_attack and weapon_timer.is_stopped():
			print("[PLAYER] Iniciando ataque...")
			perform_attack()
		else:
			if not can_attack:
				print("[PLAYER] ‚ö†Ô∏è Ataque bloqueado: can_attack = false")
			if not weapon_timer.is_stopped():
				print("[PLAYER] ‚ö†Ô∏è Ataque bloqueado: timer ainda ativo (%.2fs restantes)" % weapon_timer.time_left)


func receive_weapon_data(weapon_data: WeaponData) -> void:
	# Recebido do item colet√°vel
	print("[PLAYER] üó°Ô∏è Arma recebida: ", weapon_data.item_name)
	print("[PLAYER]    Tipo: ", weapon_data.weapon_type)
	print("[PLAYER]    Dano: ", weapon_data.damage)
	
	# ‚ö†Ô∏è NOVO: Se j√° temos uma arma equipada, dropa ela no mundo
	if current_weapon_data:
		print("[PLAYER] üîÑ J√° existe arma equipada! Dropando arma antiga...")
		drop_current_weapon()
	
	# Equipa a nova arma
	current_weapon_data = weapon_data
	call_deferred("setup_weapon")


func drop_current_weapon() -> void:
	"""
	Dropa a arma atual no mundo pr√≥ximo ao player
	"""
	if not current_weapon_data:
		print("[PLAYER] ‚ö†Ô∏è Tentou dropar arma mas n√£o h√° arma equipada")
		return
	
	print("[PLAYER] üì¶ Dropando arma: ", current_weapon_data.item_name)
	
	# Cria inst√¢ncia do item no mundo
	var dropped_item = weapon_item_scene.instantiate() as Area2D
	
	if dropped_item:
		# Posi√ß√£o de drop: um pouco √† frente do player (na dire√ß√£o que ele est√° olhando)
		var drop_offset = Vector2(50, 0)  # 50 pixels √† direita
		if direction != Vector2.ZERO:
			# Se o player est√° se movendo, dropa na dire√ß√£o oposta
			drop_offset = -direction.normalized() * 50
		
		dropped_item.global_position = global_position + drop_offset
		
		# ‚ö†Ô∏è IMPORTANTE: Configura o item ANTES de adicionar √† √°rvore (evita glitch)
		dropped_item.initialize_dropped_item(current_weapon_data)
		
		# Adiciona ao mundo (mesma cena que o player)
		get_parent().add_child(dropped_item)
		
		print("[PLAYER]    ‚úÖ Arma dropada na posi√ß√£o: ", dropped_item.global_position)
	else:
		push_error("[PLAYER] ‚ùå Falha ao instanciar item dropado")


func setup_weapon() -> void:
	if not current_weapon_data:
		print("[PLAYER] ‚ö†Ô∏è setup_weapon() chamado sem weapon_data")
		return

	print("[PLAYER] Configurando arma: ", current_weapon_data.item_name)
	# N√ÉO destru√≠mos o sprite da arma ‚Äî ele j√° est√° na cena para voc√™ poder editar escala no editor.
	# Apenas atualizamos os dados visuais e os pontos auxiliares.
	setup_weapon_marker_position()
	create_or_update_weapon_sprite()
	setup_attack_area()
	setup_projectile_spawn()
	print("[PLAYER] ‚úÖ Arma configurada com sucesso")


func setup_weapon_marker_position() -> void:
	# Configura posi√ß√£o do weapon_marker (ponto de rota√ß√£o da arma)
	if weapon_marker and current_weapon_data:
		if "weapon_marker_position" in current_weapon_data:
			weapon_marker.position = current_weapon_data.weapon_marker_position
		else:
			weapon_marker.position = Vector2.ZERO  # Posi√ß√£o padr√£o


func create_or_update_weapon_sprite() -> void:
	# Remove sprite antigo se existir
	if current_weapon_sprite != null and is_instance_valid(current_weapon_sprite):
		print("[PLAYER] Removendo sprite de arma anterior")
		current_weapon_sprite.queue_free()
		current_weapon_sprite = null
	
	# Cria novo sprite como filho do weapon_marker
	if weapon_marker:
		current_weapon_sprite = AnimatedSprite2D.new()
		weapon_marker.add_child(current_weapon_sprite)
		print("[PLAYER] Novo sprite de arma criado como filho do WeaponMarker2D")
	else:
		push_error("[PLAYER] WeaponMarker2D n√£o existe!")
		return
	
	# Atualiza frames e anima√ß√£o
	if current_weapon_data.sprite_frames:
		current_weapon_sprite.sprite_frames = current_weapon_data.sprite_frames
		print("[PLAYER]    Sprite frames configurados")
	
	if current_weapon_data.animation_name != "":
		current_weapon_sprite.play(current_weapon_data.animation_name)
		print("[PLAYER]    Tocando anima√ß√£o: ", current_weapon_data.animation_name)

	# Configura escala da arma (se definido no Resource)
	if "Sprite_scale" in current_weapon_data and current_weapon_data.Sprite_scale != Vector2.ZERO:
		current_weapon_sprite.scale = current_weapon_data.Sprite_scale
		print("[PLAYER]    Scale: ", current_weapon_sprite.scale)
	
	# Configura posi√ß√£o local do sprite (offset relativo ao marker)
	if "sprite_position" in current_weapon_data and current_weapon_data.sprite_position != Vector2.ZERO:
		current_weapon_sprite.position = current_weapon_data.sprite_position
		print("[PLAYER]    Position: ", current_weapon_sprite.position)
	else:
		# Posi√ß√£o padr√£o (centro do marker)
		current_weapon_sprite.position = Vector2.ZERO
		print("[PLAYER]    Position: Vector2.ZERO (padr√£o)")
	
	# IMPORTANTE: Rota√ß√£o local sempre 0, o marker controla a rota√ß√£o
	current_weapon_sprite.rotation = 0.0
	print("[PLAYER] ‚úÖ Sprite da arma configurado e pronto para rotacionar com o mouse")
	

func setup_attack_area() -> void:
	# Limpa hitbox antiga (se existir)
	if attack_area and is_instance_valid(attack_area):
		print("[PLAYER] Removendo hitbox antiga")
		attack_area.queue_free()
		attack_area = null

	# Cria hitbox apenas se a arma possuir colis√£o de melee
	if current_weapon_data.attack_collision:
		print("[PLAYER] Criando hitbox de melee...")
		attack_area = Area2D.new()
		attack_area.collision_layer = 16  # Layer 5: Player Hitbox
		attack_area.collision_mask = 4    # Mask 3: Detecta Enemy
		
		# üó°Ô∏è HITBOX DE ATAQUE: Configur√°vel via WeaponData.tres
		var collision_shape := CollisionShape2D.new()
		
		# Usa shape do .tres ou cria padr√£o
		if "attack_hitbox_shape" in current_weapon_data and current_weapon_data.attack_hitbox_shape:
			collision_shape.shape = current_weapon_data.attack_hitbox_shape
			print("[PLAYER]    ‚úÖ Usando attack_hitbox_shape do .tres")
		else:
			# Fallback: cria forma baseada no tipo de arma
			var attack_shape = RectangleShape2D.new()
			if current_weapon_data.weapon_type == "melee":
				attack_shape.size = Vector2(40, 15)  # Linha de corte
			else:
				attack_shape.size = Vector2(25, 25)
			collision_shape.shape = attack_shape
			print("[PLAYER]    ‚ö†Ô∏è attack_hitbox_shape n√£o definido, usando padr√£o")
		
		attack_area.add_child(collision_shape)
		
		# Usa offset do .tres
		if "attack_hitbox_offset" in current_weapon_data:
			attack_area.position = current_weapon_data.attack_hitbox_offset
			print("[PLAYER]    Hitbox offset: ", current_weapon_data.attack_hitbox_offset)
		elif "attack_collision_position" in current_weapon_data:
			attack_area.position = current_weapon_data.attack_collision_position
			print("[PLAYER]    Hitbox position (fallback): ", current_weapon_data.attack_collision_position)
		else:
			attack_area.position = Vector2(30, 0)
			print("[PLAYER]    Hitbox position: Vector2(30, 0) - padr√£o")
		
		# üé® VISUAL: Hitbox SEMPRE VIS√çVEL com cor configur√°vel
		var hitbox_color = Color(0, 1, 0, 0.6)  # Verde semi-transparente (Player = Verde)
		if "attack_hitbox_color" in current_weapon_data:
			hitbox_color = current_weapon_data.attack_hitbox_color
			# Garante visibilidade m√≠nima
			hitbox_color.a = max(hitbox_color.a, 0.5)
		
		collision_shape.debug_color = hitbox_color
		print("[PLAYER]    üé® Hitbox cor: ", hitbox_color)

		# Coloca a hitbox como filha do marker da arma
		if weapon_marker:
			weapon_marker.add_child(attack_area)
		
		# üîí IMPORTANTE: Hitbox n√£o deve rotacionar em si mesma
		# A rota√ß√£o vem do weapon_marker (pai), ent√£o mantemos rotation = 0
		attack_area.rotation = 0.0
		
		print("[PLAYER]    Hitbox shape: ", current_weapon_data.attack_collision)
		print("[PLAYER]    Layer: 16, Mask: 4")

		# Conex√µes e estado
		attack_area.body_entered.connect(_on_attack_hit)
		attack_area.monitoring = false  # fica off; liga durante o golpe


func setup_projectile_spawn() -> void:
	if projectile_spawn_marker and current_weapon_data:
		# Offset configur√°vel no recurso
		projectile_spawn_marker.position = current_weapon_data.projectile_spawn_offset


func perform_attack() -> void:
	if not current_weapon_data:
		print("[PLAYER] ‚ö†Ô∏è Tentou atacar sem arma equipada")
		return
	if not can_attack:
		print("[PLAYER] ‚ö†Ô∏è Ataque bloqueado: ainda em cooldown")
		return  # ainda em cooldown
	
	print("[PLAYER] ‚öîÔ∏è ATACANDO com ", current_weapon_data.item_name)
	print("[PLAYER]    Tipo: ", current_weapon_data.weapon_type)
	
	# Desabilita ataques durante cooldown
	can_attack = false

	# --- dispara conforme o tipo ---
	match current_weapon_data.weapon_type:
		"melee":
			print("[PLAYER]    ‚Üí Executando ataque melee")
			melee_attack()
		"projectile":
			print("[PLAYER]    ‚Üí Disparando proj√©til")
			projectile_attack()
		_:
			print("[PLAYER]    ‚Üí Tipo desconhecido, usando melee como fallback")
			melee_attack()  # fallback
	
	# Inicia cooldown usando o valor do WeaponData
	if weapon_timer:
		var cooldown_time = current_weapon_data.attack_cooldown if current_weapon_data else (1.0 / fire_rate)
		weapon_timer.wait_time = cooldown_time
		weapon_timer.start()
		print("[PLAYER]    Cooldown iniciado: %.2fs (do WeaponData)" % weapon_timer.wait_time)


func melee_attack() -> void:
	if not attack_area:
		print("[PLAYER] ‚ö†Ô∏è Ataque melee cancelado: attack_area n√£o existe")
		return
	
	print("[PLAYER] üó°Ô∏è Executando ataque melee...")
	
	# üéØ A rota√ß√£o j√° √© feita pelo weapon_marker no _process
	# N√£o rotacionar a attack_area separadamente para evitar dupla rota√ß√£o
	
	# üé¨ ANIMA√á√ÉO: Toca anima√ß√£o de ataque na arma
	if current_weapon_sprite and current_weapon_data:
		if current_weapon_data.sprite_frames.has_animation("attack"):
			current_weapon_sprite.play("attack")
			print("[PLAYER]    ‚úÖ Tocando anima√ß√£o: 'attack'")
			
			# Aguarda anima√ß√£o completar antes de ativar hitbox
			await current_weapon_sprite.animation_finished
			print("[PLAYER]    ‚úÖ Anima√ß√£o 'attack' finalizada")
		else:
			print("[PLAYER]    ‚ö†Ô∏è Anima√ß√£o 'attack' n√£o encontrada no SpriteFrames")
	
	# ‚öîÔ∏è ATIVA hitbox (s√≥ depois da anima√ß√£o)
	attack_area.monitoring = true
	print("[PLAYER]    ‚úÖ Hitbox de GOLPE ATIVADA!")
	
	# Lista de inimigos j√° atingidos (para garantir dano √∫nico)
	var enemies_hit = []
	
	# ‚ö° Dura√ß√£o da hitbox ativa
	var attack_hit_duration = 0.15
	if "attack_hitbox_duration" in current_weapon_data:
		attack_hit_duration = current_weapon_data.attack_hitbox_duration
		print("[PLAYER]    ‚è±Ô∏è Dura√ß√£o do golpe: %.2fs (do .tres)" % attack_hit_duration)
	else:
		print("[PLAYER]    ‚è±Ô∏è Dura√ß√£o do golpe: %.2fs (padr√£o)" % attack_hit_duration)
	
	# Verifica colis√µes durante a dura√ß√£o da hitbox
	var timer = 0.0
	while timer < attack_hit_duration:
		await get_tree().process_frame
		timer += get_process_delta_time()
		
		# ‚úÖ Verifica se monitoring est√° ativo antes de pegar overlapping bodies
		if not attack_area.monitoring:
			break
		
		# Verifica inimigos colidindo
		for body in attack_area.get_overlapping_bodies():
			if body.is_in_group("enemies") and body not in enemies_hit:
				enemies_hit.append(body)
				# Aplica dano
				if body.has_method("take_damage"):
					var damage_amount = current_weapon_data.damage if current_weapon_data else 10.0
					body.take_damage(damage_amount)
					print("[PLAYER]    üí• Dano aplicado a ", body.name, ": ", damage_amount)
	
	# Desativa hitbox
	attack_area.monitoring = false
	print("[PLAYER]    ‚ùå Hitbox de GOLPE DESATIVADA!")
	
	# Volta para anima√ß√£o idle/default
	if current_weapon_sprite and current_weapon_data:
		# Verifica se existe a anima√ß√£o antes de tocar
		if current_weapon_data.sprite_frames.has_animation(current_weapon_data.animation_name):
			current_weapon_sprite.play(current_weapon_data.animation_name)
			print("[PLAYER]    üîÑ Voltando para anima√ß√£o: ", current_weapon_data.animation_name)
		elif current_weapon_data.sprite_frames.has_animation("default"):
			current_weapon_sprite.play("default")
			print("[PLAYER]    üîÑ Voltando para anima√ß√£o: default")
		else:
			current_weapon_sprite.stop()
			print("[PLAYER]    ‚è∏Ô∏è Sprite parado (sem anima√ß√£o idle)")


func projectile_attack() -> void:
	print("[PLAYER] üèπ Disparando proj√©til...")
	var scene := preload("res://scenes/projectiles/projectile.tscn")
	if not scene or not projectile_spawn_marker:
		print("[PLAYER] ‚ö†Ô∏è Proj√©til cancelado: scene ou spawn_marker inv√°lido")
		return

	var projectile := scene.instantiate()
	projectile.global_position = projectile_spawn_marker.global_position
	print("[PLAYER]    Spawn position: ", projectile_spawn_marker.global_position)

	# Entra na √°rvore primeiro para garantir que _ready/@onready do proj√©til rodem
	get_tree().current_scene.add_child(projectile)
	print("[PLAYER]    Proj√©til adicionado √† cena")

	# Dire√ß√£o para o mouse
	var dir: Vector2 = (get_global_mouse_position() - projectile.global_position).normalized()
	print("[PLAYER]    Dire√ß√£o: ", dir)

	# Passa os dados DEPOIS (deferred) ‚Äî evita Nil no AnimatedSprite2D do proj√©til
	projectile.call_deferred("setup_from_weapon_data", current_weapon_data, dir)
	print("[PLAYER]    ‚úÖ Proj√©til configurado e disparado")


func _on_attack_hit(body: Node) -> void:
	print("[PLAYER] üí• Hitbox colidiu com: ", body.name)
	print("[PLAYER]    Grupos: ", body.get_groups())
	if body.is_in_group("enemies"):
		print("[PLAYER]    ‚úÖ √â um inimigo! Aplicando dano...")
		apply_damage_to_target(body)
	else:
		print("[PLAYER]    ‚ö†Ô∏è N√£o √© um inimigo, ignorando")


func apply_damage_to_target(target: Node) -> void:
	if current_weapon_data == null:
		print("[PLAYER] ‚ö†Ô∏è Dano cancelado: sem arma equipada")
		return
	if target.has_method("take_damage"):
		print("[PLAYER] üí• Causando %.1f de dano em %s" % [current_weapon_data.damage, target.name])
		target.take_damage(current_weapon_data.damage)
		print("[PLAYER]    ‚úÖ Dano aplicado com sucesso")
	else:
		print("[PLAYER]    ‚ö†Ô∏è Alvo n√£o tem m√©todo take_damage()")


func _on_weapon_timer_timeout() -> void:
	can_attack = true
	print("[PLAYER] ‚è±Ô∏è Cooldown terminado, can_attack = true")


# ===== SISTEMA DE SA√öDE =====
func _ready_health() -> void:
	current_health = max_health


func take_damage(amount: float) -> void:
	if is_dead:
		print("[PLAYER] ‚ö†Ô∏è Dano ignorado: player j√° est√° morto")
		return
	
	current_health -= amount
	print("[PLAYER] üíî DANO RECEBIDO: %.1f" % amount)
	print("[PLAYER]    HP atual: %.1f/%.1f (%.1f%%)" % [current_health, max_health, (current_health/max_health)*100])
	
	# Visual de dano (flash)
	apply_hit_flash()
	
	# Verifica morte
	if current_health <= 0:
		print("[PLAYER] ‚ò†Ô∏è HP chegou a 0, iniciando morte...")
		die()


func apply_hit_flash() -> void:
	print("[PLAYER]    üî¥ Aplicando flash vermelho")
	if animation:
		animation.modulate = Color(1, 0.3, 0.3)  # Vermelho
		await get_tree().create_timer(0.1).timeout
		animation.modulate = Color(1, 1, 1)  # Volta ao normal
		print("[PLAYER]    ‚úÖ Flash terminado")


func die() -> void:
	is_dead = true
	print("[PLAYER] ‚ò†Ô∏è‚ò†Ô∏è‚ò†Ô∏è PLAYER MORREU! ‚ò†Ô∏è‚ò†Ô∏è‚ò†Ô∏è")
	print("[PLAYER]    Physics desativado")
	
	# Para o movimento
	set_physics_process(false)
	velocity = Vector2.ZERO
	
	# Para estat√≠sticas
	if has_node("/root/GameStats"):
		get_node("/root/GameStats").stop_game()
	
	# Aguarda um pouco antes de mostrar a tela de Game Over
	await get_tree().create_timer(1.5).timeout
	
	# Carrega e mostra a tela de Game Over
	show_game_over()


func show_game_over() -> void:
	print("[PLAYER] üì∫ Mostrando tela de Game Over")
	print("[PLAYER] üîÑ VERS√ÉO NOVA - Trocando cena inteira (n√£o add_child)")
	
	# Para o jogo (j√° est√° pausado pelo die())
	if has_node("/root/GameStats"):
		get_node("/root/GameStats").stop_game()
		print("[PLAYER]    GameStats.stop_game() chamado")
	
	# Aguarda um frame para garantir que tudo foi processado
	print("[PLAYER]    Aguardando 1 frame...")
	await get_tree().process_frame
	print("[PLAYER]    Frame processado, iniciando troca de cena")
	
	# TROCA a cena para o Game Over (n√£o adiciona como filho!)
	var game_over_path = "res://scenes/ui/game_over.tscn"
	
	if ResourceLoader.exists(game_over_path):
		print("[PLAYER]    Arquivo encontrado: ", game_over_path)
		print("[PLAYER]    Chamando change_scene_to_file()...")
		get_tree().change_scene_to_file(game_over_path)
		print("[PLAYER] ‚úÖ change_scene_to_file() executado!")
	else:
		push_error("N√£o foi poss√≠vel encontrar: " + game_over_path)
		print("[PLAYER] ‚ùå ERRO: Arquivo n√£o encontrado!")
